# claude-research-orchestrator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: paper-template-config.json  routing-keywords.json  settings.json
.claude/agents/: codex-debugger.md  data-analyst.md  discussant.md  experiment-runner.md  gemini-explore.md  hypothesis-generator.md  literature-reviewer.md  methodology-designer.md  paper-writer.md  peer-reviewer.md  script-reviewer.md  viz-reviewer.md
.claude/hooks/: agent-router.py  citation-guard.py  error-to-codex.py  log-cli-tools.py  reproducibility-check.py  research-keyword-detector.py  session-end.py  session-start.py
.claude/rules/: agent-routing.md  citation-rigor.md  language.md  reproducibility.md  research-integrity.md  statistical-rigor.md  writing-style.md
.claude/skills/analyze-results/: SKILL.md
.claude/skills/ask-codex/: SKILL.md
.claude/skills/ask-gemini/: SKILL.md
.claude/skills/checkpoint/: SKILL.md
.claude/skills/design-experiment/: SKILL.md
.claude/skills/discuss-results/: SKILL.md
.claude/skills/extend-literature/: SKILL.md
.claude/skills/generate-hypothesis/: SKILL.md
.claude/skills/identify-gaps/: SKILL.md
.claude/skills/init-research/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/literature-review/: SKILL.md
.claude/skills/paper-deep-read/: SKILL.md
.claude/skills/peer-review/: SKILL.md
.claude/skills/review-figures/: SKILL.md
.claude/skills/review-script/: SKILL.md
.claude/skills/revise/: SKILL.md
.claude/skills/run-experiment/: SKILL.md
.claude/skills/write-paper/: SKILL.md
.claude/templates/: README.md  repro.py  viz.py
.claude/templates/python/: viz.py
.codex/: AGENTS.md
.gemini/: GEMINI.md
scripts/: setup.sh  update.sh
