[project]
name = "research-project"
version = "0.0.1"
description = "Research project scaffolded by claude-research-orchestrator. Replace this description via /init-research."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "ipykernel>=6.29",
]

# uv treats this project as a virtual environment for dependencies only,
# not as a buildable / installable Python package. Research code lives in
# src/{experiments,analysis,utils}/ and is imported via PYTHONPATH=src
# (configured for tests below; experiment scripts get it via a small
# bootstrap in src/utils/repro.py).
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
